--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,13 +48,16 @@ dependencies {
 
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.zaze:zazecommon:1.2.3@aar'
-    compile 'com.zaze:zazeutil:1.2.13'
+    compile 'com.zaze:zazeutil:1.2.16'
     compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
 
     compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
     compile 'io.reactivex.rxjava2:rxjava:2.1.14'
 
 //    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
     androidTestCompile "android.arch.persistence.room:testing:$rootProject.roomVersion"
     testImplementation "junit:junit:$rootProject.junitVersion"
