播放通知栏

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".music.MusicPlayerActivity"
+            android:name=".music.MusicDetailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
