--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,35 +31,50 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+//    implementation "androidx.fragment:fragment:$supportLibraryVersionx"
+//    implementation "androidx.appcompat:appcompat:$supportLibraryVersionx"
+//    implementation "androidx.recyclerview:recyclerview:$supportLibraryVersionx"
+//    implementation "androidx.viewpager:viewpager:$supportLibraryVersionx"
+//    implementation "com.google.android.material:material:$supportLibraryVersionx"
+//    //
+//    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersionx"
+//    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersionx"
+
+    implementation "com.android.support:design:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
-    implementation "com.android.support:design:$rootProject.supportLibraryVersion"
-//    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    // room
-    compile "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    implementation "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:animated-vector-drawable:$rootProject.supportLibraryVersion"
+
+    //
+    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
+    //
+    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
     kapt "android.arch.persistence.room:compiler:$rootProject.roomVersion"
-    compile "android.arch.persistence.room:rxjava2:$rootProject.roomVersion"
-    // databinding
+    implementation "android.arch.persistence.room:rxjava2:$rootProject.roomVersion"
+    androidTestCompile "android.arch.persistence.room:testing:$rootProject.roomVersion"
+
     kapt "com.android.databinding:compiler:$gradlePluginVersion"
 
-    compile "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
-
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.zaze:zazecommon:1.2.3@aar'
-    compile 'com.zaze:zazeutil:1.2.16'
-    compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
-
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation('com.zaze:zazecommon:1.2.3@aar'){
+        exclude group: 'com.android.support:design'
+    }
+    implementation 'com.zaze:zazeutil:1.2.16'
+    //
+    //
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
 
 //    compile "com.daimajia.swipelayout:library:1.2.0@aar"
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
-    androidTestCompile "android.arch.persistence.room:testing:$rootProject.roomVersion"
     testImplementation "junit:junit:$rootProject.junitVersion"
     androidTestImplementation "com.android.support.test:runner:$rootProject.runnerVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
