--- a/build.gradle
+++ b/build.gradle
@@ -35,15 +35,17 @@ ext {
     // Sdk and tools
     // Support library and architecture components support minSdk 14 and above.
 
-    compileSdkVersion = 26
-    buildToolsVersion = '26.0.2'
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
     minSdkVersion = 16
-    targetSdkVersion = 26
-    supportLibraryVersion = '26.1.0'
+    targetSdkVersion = 28
     versionCode = 1
     versionName = "v1.0.1"
+    supportLibraryVersion = '28.0.0'
+    supportLibraryVersionx = '1.0.0'
     // Architecture Components dependencies
-    archLifecycleVersion = "1.0.0"
+    archLifecycleVersion = "1.1.1"
+    archLifecycleVersionx = "2.0.0-rc01"
     // App dependencies
     guavaVersion = '23.6-android'
     // Test
