- base包整理 - viewModel 整理 - 实现AlbumCoverViewPager 滑动切换歌曲 - 开始着手music control ui

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation('com.zaze:zazecommon:1.2.3@aar'){
-        exclude group: 'com.android.support:design'
-    }
+//    implementation 'com.zaze:zazecommon:1.2.3@aar'
     implementation 'com.zaze:zazeutil:1.2.16'
     //
     //
