--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-//        javaCompileOptions {
-//            annotationProcessorOptions {
-//                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
-//            }
-//        }
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -31,51 +31,59 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation "androidx.fragment:fragment:$supportLibraryVersionx"
-//    implementation "androidx.appcompat:appcompat:$supportLibraryVersionx"
-//    implementation "androidx.recyclerview:recyclerview:$supportLibraryVersionx"
-//    implementation "androidx.viewpager:viewpager:$supportLibraryVersionx"
-//    implementation "com.google.android.material:material:$supportLibraryVersionx"
+    implementation "androidx.fragment:fragment:$supportLibraryVersionx"
+    implementation "androidx.appcompat:appcompat:$supportLibraryVersionx"
+    implementation "androidx.recyclerview:recyclerview:$supportLibraryVersionx"
+    implementation "androidx.viewpager:viewpager:$supportLibraryVersionx"
+    implementation "com.google.android.material:material:$supportLibraryVersionx"
+    //
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersionx"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersionx"
+    //
+    implementation "androidx.room:room-runtime:$rootProject.roomVersionx"
+    kapt "androidx.room:room-compiler:$rootProject.roomVersionx"
+    implementation "androidx.room:room-rxjava2:$rootProject.roomVersionx"
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersionx"
+    //
+    androidTestImplementation "androidx.test:runner:$rootProject.runnerVersionx"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersionx"
+    // -----------------------
+
+//    implementation "com.android.support:design:$rootProject.supportLibraryVersion"
+//    implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
+//    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
+//    implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
+//    implementation "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
+//    implementation "com.android.support:animated-vector-drawable:$rootProject.supportLibraryVersion"
 //    //
-//    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersionx"
-//    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersionx"
-
-    implementation "com.android.support:design:$rootProject.supportLibraryVersion"
-    implementation "com.android.support:support-v4:$rootProject.supportLibraryVersion"
-    implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
-    implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
-    implementation "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
-    implementation "com.android.support:animated-vector-drawable:$rootProject.supportLibraryVersion"
-
+//    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+//    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
     //
-    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
+//    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+//    kapt "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+//    implementation "android.arch.persistence.room:rxjava2:$rootProject.roomVersion"
+//    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
     //
-    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
-    kapt "android.arch.persistence.room:compiler:$rootProject.roomVersion"
-    implementation "android.arch.persistence.room:rxjava2:$rootProject.roomVersion"
-    androidTestCompile "android.arch.persistence.room:testing:$rootProject.roomVersion"
+//    androidTestImplementation "com.android.support.test:runner:$rootProject.runnerVersion"
+//    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
 
-    kapt "com.android.databinding:compiler:$gradlePluginVersion"
+    // -----------------------
+//    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
+    // -----------------------
+    testImplementation "junit:junit:$rootProject.junitVersion"
+
+//    kapt "com.android.databinding:compiler:$gradlePluginVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.code.gson:gson:2.8.2'
-//    implementation 'com.zaze:zazecommon:1.2.3@aar'
-    implementation 'com.zaze:zazeutil:1.2.16'
-    //
     //
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'com.zaze:zazeutil:1.3.0'
+    //    implementation 'com.zaze:zazecommon:1.3.0@aar'
 
-//    compile "com.daimajia.swipelayout:library:1.2.0@aar"
-
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-
-    testImplementation "junit:junit:$rootProject.junitVersion"
-    androidTestImplementation "com.android.support.test:runner:$rootProject.runnerVersion"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 
 
 }
