--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.51'
-    ext.gradlePluginVersion = '3.0.1'
+    ext.kotlin_version = '1.2.71'
+    ext.gradlePluginVersion = '3.2.1'
 
     repositories {
         google()
@@ -32,9 +32,6 @@ task clean(type: Delete) {
 }
 
 ext {
-    // Sdk and tools
-    // Support library and architecture components support minSdk 14 and above.
-
     compileSdkVersion = 28
     buildToolsVersion = '28.0.3'
     minSdkVersion = 16
@@ -42,11 +39,8 @@ ext {
     versionCode = 1
     versionName = "v1.0.1"
     supportLibraryVersion = '28.0.0'
-    supportLibraryVersionx = '1.0.0'
-    // Architecture Components dependencies
     archLifecycleVersion = "1.1.1"
-    archLifecycleVersionx = "2.0.0-rc01"
-    // App dependencies
+    roomVersion = "1.1.1"
     guavaVersion = '23.6-android'
     // Test
     junitVersion = '4.12'
@@ -57,6 +51,12 @@ ext {
     runnerVersion = '1.0.1'
     rulesVersion = '1.0.1'
     espressoVersion = '3.0.1'
-    roomVersion = "1.1.1"
+
+    // -------------
+    supportLibraryVersionx = '1.0.0'
+    archLifecycleVersionx = "2.0.0"
+    roomVersionx = "2.0.0"
+    runnerVersionx = '1.1.0-alpha3'
+    espressoVersionx = '3.1.0-alpha3'
 }
 
