--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,12 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -28,7 +28,6 @@ android {
         enabled = true
     }
 }
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.fragment:fragment:$supportLibraryVersionx"
@@ -36,19 +35,22 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$supportLibraryVersionx"
     implementation "androidx.viewpager:viewpager:$supportLibraryVersionx"
     implementation "com.google.android.material:material:$supportLibraryVersionx"
+    implementation "androidx.legacy:legacy-support-v4:$supportLibraryVersionx"
     //
-    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersionx"
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersionx"
+    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersionx"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
     //
-    implementation "androidx.room:room-runtime:$rootProject.roomVersionx"
-    kapt "androidx.room:room-compiler:$rootProject.roomVersionx"
-    implementation "androidx.room:room-rxjava2:$rootProject.roomVersionx"
-    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersionx"
+    implementation "androidx.room:room-runtime:$roomVersionx"
+    kapt "androidx.room:room-compiler:$roomVersionx"
+    implementation "androidx.room:room-rxjava2:$roomVersionx"
+    androidTestImplementation "androidx.room:room-testing:$roomVersionx"
     //
-    androidTestImplementation "androidx.test:runner:$rootProject.runnerVersionx"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersionx"
+    androidTestImplementation "androidx.test:rules:$runnerVersionx"
+    androidTestImplementation "androidx.test:runner:$runnerVersionx"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersionx"
+//    androidTestImplementation "androidx.test.uiautomator:uiautomator:$rootProject.uiautomatorx"
     // -----------------------
-    testImplementation "junit:junit:$rootProject.junitVersion"
+    testImplementation "junit:junit:$junitVersion"
 
 //    kapt "com.android.databinding:compiler:$gradlePluginVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -56,11 +58,23 @@ dependencies {
     //
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
-    implementation 'com.zaze:zazeutil:1.3.0'
+
+
+    implementation 'com.github.zaze359.test:zazeutil:1.0.0'
+//    implementation 'com.github.zaze359:test:1.0.0'
+//        implementation 'com.github.zaze359:test:zazecommon:1.0.0'
+//    implementation 'com.zaze:zazeutil:1.3.0'
     //    implementation 'com.zaze:zazecommon:1.3.0@aar'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-
+    //
+//
+//    implementation "android.arch.work:work-runtime:$work_version" // use -ktx for Kotlin
+//    // optional - Firebase JobDispatcher support
+//    implementation "android.arch.work:work-firebase:$work_version"
+//    // optional - Test helpers
+//    androidTestImplementation "android.arch.work:work-testing:$work_version"
 
 }
+
