--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 
     <application
         android:name=".App"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,6 +18,7 @@
             android:launchMode="singleTask"
             android:theme="@style/AppTheme">
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -26,8 +28,12 @@
             android:name=".music.MusicDetailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".music.PlaylistActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-        <service android:name=".service.PlayerService" />
+        <service android:name=".service.MusicService" />
 
     </application>
 
