--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url "https://dl.bintray.com/zaze359/maven"
-        }
+//        maven {
+//            url "https://dl.bintray.com/zaze359/maven"
+//        }
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -38,9 +39,7 @@ ext {
     targetSdkVersion = 28
     versionCode = 1
     versionName = "v1.0.1"
-    supportLibraryVersion = '28.0.0'
-    archLifecycleVersion = "1.1.1"
-    roomVersion = "1.1.1"
+    //
     guavaVersion = '23.6-android'
     // Test
     junitVersion = '4.12'
@@ -48,15 +47,13 @@ ext {
     powerMockito = '1.6.2'
     hamcrestVersion = '1.3'
     //
-    runnerVersion = '1.0.1'
-    rulesVersion = '1.0.1'
-    espressoVersion = '3.0.1'
-
+    work_version = '1.0.0-alpha11'
     // -------------
     supportLibraryVersionx = '1.0.0'
     archLifecycleVersionx = "2.0.0"
     roomVersionx = "2.0.0"
     runnerVersionx = '1.1.0-alpha3'
+    uiautomatorx = '2.2.0'
     espressoVersionx = '3.1.0-alpha3'
 }
 
