--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     //
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+//    implementation 'com.github.bumptech.glide:okhttp3-integration:1.5.0'
+
 //
 //    implementation "android.arch.work:work-runtime:$work_version" // use -ktx for Kotlin
 //    // optional - Firebase JobDispatcher support
