--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled = true
+
+    lintOptions {
+        abortOnError false
     }
 }
 dependencies {
