--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,18 @@ android {
         }
     }
 
-    lintOptions {
-        abortOnError false
+//    kapt {
+//        generateStubs = true
+//    }
+
+    dataBinding {
+        enabled = true
     }
+
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_7
+//        targetCompatibility JavaVersion.VERSION_1_7
+//    }
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -39,7 +48,6 @@ dependencies {
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanaryVersion"
     //
 //    implementation 'com.github.bumptech.glide:okhttp3-integration:1.5.0'
-
     //
     implementation project(rootProject.ext.dependencies.project.moduleCommon)
     implementation project(rootProject.ext.dependencies.project.moduleMusic)
