--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,11 +12,6 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
-            }
-        }
     }
 
     buildTypes {
@@ -25,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+//    kapt {
+//        generateStubs = true
+//    }
 
     dataBinding {
         enabled = true
@@ -41,7 +40,8 @@ dependencies {
 
     //
     api "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersionx"
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
+    kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
+//    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
     //
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.14'
