处理报错 准备jenkins 自动化打包

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx1536m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.enc
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+#android.enableAapt2=false
