--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,6 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
         applicationId "com.zaze.tribe"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -19,38 +8,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-//    kapt {
-//        generateStubs = true
-//    }
-
-    dataBinding {
-        enabled = true
-    }
-
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_7
-//        targetCompatibility JavaVersion.VERSION_1_7
-//    }
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.viewpager:viewpager:$supportLibraryVersionx"
-    //
-    androidTestImplementation "androidx.test:rules:$runnerVersionx"
-    androidTestImplementation "androidx.test:runner:$runnerVersionx"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersionx"
-//    androidTestImplementation "androidx.test.uiautomator:uiautomator:$rootProject.uiautomatorx"
     // -----------------------
-    testImplementation "junit:junit:$junitVersion"
-    //
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanaryVersion"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanaryVersion"
     //
 //    implementation 'com.github.bumptech.glide:okhttp3-integration:1.5.0'
     //
-    implementation project(rootProject.ext.dependencies.project.moduleCommon)
-    implementation project(rootProject.ext.dependencies.project.moduleMusic)
+    implementation project(rootProject.ext.moduleName.moduleCommon)
+    implementation project(rootProject.ext.moduleName.moduleMusic)
 
 //
 //    implementation "android.arch.work:work-runtime:$work_version" // use -ktx for Kotlin
