--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,17 +1,6 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
 //        applicationId "com.zaze.tribe"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode rootProject.ext.versionCode
-        versionName rootProject.ext.versionName
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -20,39 +9,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-//    kapt {
-//        generateStubs = true
-//    }
-
-    dataBinding {
-        enabled = true
-    }
 }
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     //
+    api "com.google.android.material:material:$supportLibraryVersionx"
     api "androidx.appcompat:appcompat:$supportLibraryVersionx"
     api "androidx.recyclerview:recyclerview:$supportLibraryVersionx"
-    api "com.google.android.material:material:$supportLibraryVersionx"
-    api "androidx.legacy:legacy-support-v4:$supportLibraryVersionx"
+    api "androidx.viewpager:viewpager:$supportLibraryVersionx"
 
-    //
+    api "androidx.legacy:legacy-support-v4:$supportLibraryVersionx"
     api "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersionx"
     kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
 //    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
     //
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.14'
-    //
-    testImplementation "junit:junit:$junitVersion"
-    //
-    androidTestImplementation "androidx.test:runner:$runnerVersionx"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersionx"
-    //
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanaryVersion"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanaryVersion"
     //
     api "com.github.zaze359.test:zazeutil:$zazeutilVersion"
     //
