--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,12 @@
 # Project-wide Gradle settings.
-
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -18,3 +14,14 @@ org.gradle.jvmargs=-Xmx1536m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.enc
 android.useAndroidX=true
 android.enableJetifier=true
 #android.enableAapt2=false
+PRODUCT_FLAVORS=admin
+APK_NAME=SmallTirbe.apk
+APP_VERSION_CODE=1
+APP_VERSION_NAME=v1.0
+# 是否为 Jenkins 编译, 默认是 false
+IS_JENKINS=false
+# 签名
+STORE_FILE=android_zaze.keystore
+STORE_PASSWORD=3184582
+KEY_ALIAS=android
+KEY_PASSWORD=3184582
