--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ dependencies {
     //
 //    implementation 'com.github.bumptech.glide:okhttp3-integration:1.5.0'
     //
-    implementation project(rootProject.ext.moduleName.moduleCommon)
-    implementation project(rootProject.ext.moduleName.moduleMusic)
+    implementation project(rootProject.ext.modules.common)
+    implementation project(rootProject.ext.modules.music)
 
 //
 //    implementation "android.arch.work:work-runtime:$work_version" // use -ktx for Kotlin
