- 测试Router功能 - 扫描所有class并保存sp - 指定path不存在时的错误处理

--- a/build.gradle
+++ b/build.gradle
@@ -90,9 +90,9 @@ subprojects {
                 }
 
                 free {
-                    applicationIdSuffix '.free'
+//                    applicationIdSuffix '.free'
                     buildConfigField("String", "URL", "\"http://www.baidu.com\"")
-                    resValue("string", "app_name", "小部落F")
+                    resValue("string", "app_name", "小部落")
                 }
             }
             sourceSets {
