--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:theme="@style/AppTheme"
         tools:replace="android:name, android:allowBackup">
 
+
+        <activity android:name=".NotFountActivity" />
     </application>
 
 
