--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     //
     api "com.github.zaze359.test:zazeutil:$zazeutilVersion"
     //
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'com.google.code.gson:gson:2.8.2'
     api 'com.github.bumptech.glide:glide:3.8.0'
     //
+    api project(rootProject.ext.modules.router)
 }
