- 提取 MusicNotification 处理 notification 相关操作 - 增加RouterActivity处理页面跳转

--- a/router/src/main/AndroidManifest.xml
+++ b/router/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zaze.router" />
+    package="com.zaze.router" >
+    <application>
+
+        <activity android:name=".RouterActivity"/>
+
+    </application>
+
+</manifest>
