--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,25 +12,5 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
-    //
-    api "com.google.android.material:material:$supportLibraryVersionx"
-    api "androidx.appcompat:appcompat:$supportLibraryVersionx"
-    api "androidx.recyclerview:recyclerview:$supportLibraryVersionx"
-    api "androidx.viewpager:viewpager:$supportLibraryVersionx"
-
-    api "androidx.legacy:legacy-support-v4:$supportLibraryVersionx"
-    api "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersionx"
-    kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
-//    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
-    //
-    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    api 'io.reactivex.rxjava2:rxjava:2.1.14'
-    //
-    api "com.github.zaze359.test:zazeutil:$zazeutilVersion"
-    //
-    api 'com.google.code.gson:gson:2.8.2'
-    api 'com.github.bumptech.glide:glide:3.8.0'
-    //
-    api project(rootProject.ext.modules.router)
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
