--- a/ext.gradle
+++ b/ext.gradle
@@ -34,6 +34,8 @@ ext {
 
 subprojects {
     def isMainApp = project.name == 'app'
+    def isRouter = project.name == 'router'
+    def isCommon = project.name == 'common'
     if (isMainApp) {
         apply plugin: 'com.android.application'
     } else {
@@ -96,21 +98,38 @@ subprojects {
     }
 
     dependencies {
-//        androidTestImplementation "androidx.test:rules:$runnerVersionx"
-
         androidTestImplementation "androidx.test:runner:$runnerVersionx"
         androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersionx"
         testImplementation "junit:junit:$junitVersion"
 
-
         debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanaryVersion"
         releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanaryVersion"
-
         implementation "androidx.appcompat:appcompat:$supportLibraryVersionx"
         implementation "androidx.core:core:$supportLibraryVersionx"
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
+        if (!isRouter) {
+            implementation "com.google.android.material:material:$supportLibraryVersionx"
+            implementation "androidx.appcompat:appcompat:$supportLibraryVersionx"
+            implementation "androidx.recyclerview:recyclerview:$supportLibraryVersionx"
+            implementation "androidx.viewpager:viewpager:$supportLibraryVersionx"
+            implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+            implementation "androidx.legacy:legacy-support-v4:$supportLibraryVersionx"
+            implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersionx"
+            kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
+//            annotationProcessor "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersionx"
+            //
+            implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+            implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+            //
+            implementation "com.github.zaze359.test:zazeutil:$zazeutilVersion"
+            //
+            implementation 'com.google.code.gson:gson:2.8.2'
+            implementation 'com.github.bumptech.glide:glide:3.8.0'
+            implementation project(rootProject.ext.modules.router)
+            if (!isCommon) {
+                implementation project(rootProject.ext.modules.common)
+            }
+        }
 
     }
 }
