- 小说阅读器start - 初步搭建框架 - 开始处理txt数据

--- a/ext.gradle
+++ b/ext.gradle
@@ -7,9 +7,10 @@ ext {
     versionName = "v1.0.1"
 
     modules = [
-            common: ':common',
-            music : ':music',
-            router: ':router'
+            common  : ':common',
+            music   : ':music',
+            reader  : ':reader',
+            router  : ':router'
     ]
 
     guavaVersion = '23.6-android'
