--- a/reader/src/main/AndroidManifest.xml
+++ b/reader/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
         <activity
             android:name="com.zaze.tribe.reader.ReaderActivity"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:theme="@style/ReadFullScreen">
 
         </activity>
