- 显示章节列表 - 显示菜单和隐藏菜单时状态栏的处理

--- a/ext.gradle
+++ b/ext.gradle
@@ -61,7 +61,7 @@ subprojects {
         if (isMainApp) {
             productFlavors {
                 pro {
-                    applicationId "com.zaze.tribe.pro"
+//                    applicationId "com.zaze.tribe.pro"
                     buildConfigField("String", "URL", "\"http://www.google.com\"")
                     resValue("string", "app_name", "小部落P")
                 }
