1.添加阿里云maven 2. 升级kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 android {
     defaultConfig {
         applicationId "com.zaze.tribe"
+        packagingOptions {
+            exclude 'META-INF/proguard/coroutines.pro'
+        }
     }
     buildTypes {
         release {
