--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.50'
     ext.gradlePluginVersion = '3.2.1'
 
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://jitpack.io' }
         mavenCentral()
         google()
         jcenter()
@@ -15,13 +17,14 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://jitpack.io' }
         mavenCentral()
         google()
         jcenter()
 //        maven {
 //            url "https://dl.bintray.com/zaze359/maven"
 //        }
-        maven { url 'https://jitpack.io' }
     }
 }
 
