--- a/router/build.gradle
+++ b/router/build.gradle
@@ -23,10 +23,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-//    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
-//    implementation 'androidx.core:core:1.0.0-alpha1'
-//    testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+    testImplementation deps.junit
+    androidTestImplementation deps.atsl.runner
+    androidTestImplementation deps.espresso.core
 }
